# TextractorSender

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  vcpkg.json
